--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
+# Nodejs
+NODE_ENV=prod
+
 # Server
 SERVER_PORT=3000
+
+# mongodb Cluster
+URL_CLUSTER=mongodb+srv://isaac:VnEzXfkLqeX827l7@clustercorujao.eh5shjk.mongodb.net/?retryWrites=true&w=majority
