--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "Isaac Carvalho",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^5.0.0",
     "@types/node": "^20.11.14",
+    "async-busboy": "^0.7.0",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.0",
     "koa-body": "^6.0.1",
+    "koa-multer": "^1.0.2",
     "koa-router": "^12.0.1",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
@@ -22,6 +25,8 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/async-busboy": "^1.1.4",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/koa": "^2.14.0",
     "@types/koa-router": "^7.4.8"
   }
