--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:local": "nodemon -L",
+    "verify": "tsc --noEmit --esModuleInterop src/**/*.ts",
     "start": "tsx --env-file .env src/server/server.ts"
   },
   "author": "Isaac Carvalho",
@@ -19,6 +20,7 @@
     "koa-body": "^6.0.1",
     "koa-multer": "^1.0.2",
     "koa-router": "^12.0.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
     "tsx": "^4.7.0",
